objects/Fulfillment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Centermark_Estimated_Launch_Date__c</fullName>
        <label>Centermark Estimated Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Centermark_Original_Est_Launch_Date__c</fullName>
        <label>Centermark Original Est Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Monthly_Spend__c</fullName>
        <formula>Opportunity__r.Corporate_Recurring_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Monthly Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Imp_Original_Est_Launch_Date__c</fullName>
        <label>Custom Imp Original Est Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Implementation_Estimated_Launch__c</fullName>
        <label>Custom Implementation Estimated Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Implementation_Launch_Date__c</fullName>
        <label>Custom Implementation Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Estimated_Launch_Date__c</fullName>
        <label>Display Estimated Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Launch_Date__c</fullName>
        <label>Display Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Original_Est_Launch_Date__c</fullName>
        <label>Display Original Est Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook_Estimated_Launch_Date__c</fullName>
        <label>Facebook Estimated Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook_Launch_Date__c</fullName>
        <label>Facebook Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook_Original_Est_Launch_Date__c</fullName>
        <label>Facebook Original Est Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Date_Change_Reason_Detail__c</fullName>
        <label>Launch Date Change Reason Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>One_Time_Fees__c</fullName>
        <formula>Opportunity__r.One_time_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-Time Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Closed_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Url__c</fullName>
        <formula>HYPERLINK(Opportunity__r.OwnerId, Opportunity__r.Owner.Full_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organic_Launch_Date__c</fullName>
        <label>Centermark Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPC_Estimated_Launch_Date__c</fullName>
        <label>PPC Estimated Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPC_Original_Est_Launch_Date__c</fullName>
        <label>PPC Original Est Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Participating_of_Locations_Corp_Paid__c</fullName>
        <formula>Opportunity__r.Participating_Number_of_Locations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participating # of Locations - Corp Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_1_Estimated_Launch_Date__c</fullName>
        <label>Phase 1 Estimated Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_1_Launch_Date_Change_Reason_Detail__c</fullName>
        <label>Phase 1 Launch Date Change Reason Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase_1_Launch_Date__c</fullName>
        <label>Phase 1 Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_1_Original_Est_Launch_Date__c</fullName>
        <label>Phase 1 Original Est Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_1_Product_Launch_Details__c</fullName>
        <label>Phase 1 Product Launch Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase_2_Estimated_Launch_Date__c</fullName>
        <label>Phase 2 Estimated Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_2_Launch_Date_Change_Reason_Detail__c</fullName>
        <label>Phase 2 Launch Date Change Reason Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase_2_Launch_Date__c</fullName>
        <label>Phase 2 Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_2_Original_Est_Launch_Date__c</fullName>
        <label>Phase 2 Original Est Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_2_Product_Launch_Details__c</fullName>
        <label>Phase 2 Product Launch Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase_3_Estimated_Launch_Date__c</fullName>
        <label>Phase 3 Estimated Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_3_Launch_Date_Change_Reason_Detail__c</fullName>
        <label>Phase 3 Launch Date Change Reason Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase_3_Launch_Date__c</fullName>
        <label>Phase 3 Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_3_Original_Est_Launch_Date__c</fullName>
        <label>Phase 3 Original Est Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_3_Product_Launch_Details__c</fullName>
        <label>Phase 3 Product Launch Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phased_Launch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phased Launch?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Sold__c</fullName>
        <description>Stores the products sold for the related opportunity.  Populated via workflow.</description>
        <label>Products Sold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Plan_Link__c</fullName>
        <description>Stores link to project plan</description>
        <label>Project Plan Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reviews_Estimated_Launch_Date__c</fullName>
        <label>Reviews Estimated Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviews_Launch_Date__c</fullName>
        <label>Reviews Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviews_Original_Est_Launch_Date__c</fullName>
        <label>Reviews Original Est Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sponsored_Launch_Date__c</fullName>
        <label>PPC Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategic_Project_Manager__c</fullName>
        <formula>Opportunity__r.Strategic_Project_Manager__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Launch_Date__c</fullName>
        <label>Website Template Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website_Template_Estimated_Launch_Date__c</fullName>
        <label>Website Template Estimated Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website_Template_Original_Est_Launch__c</fullName>
        <label>Website Template Original Est Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Date_Change_Reason__c</fullName>
        <label>Launch Date Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yodle Caused</fullName>
                </value>
                <value>
                    <fullName>Client Caused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_1_Launch_Date_Change_Reason__c</fullName>
        <label>Phase 1 Launch Date Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yodle Caused</fullName>
                </value>
                <value>
                    <fullName>Client Caused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_1_Products__c</fullName>
        <label>Phase 1 Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Miner</fullName>
                </value>
                <value>
                    <fullName>Centermark</fullName>
                </value>
                <value>
                    <fullName>Centermark Lite</fullName>
                </value>
                <value>
                    <fullName>Client Side Organic</fullName>
                </value>
                <value>
                    <fullName>Corporate Funded Display</fullName>
                </value>
                <value>
                    <fullName>Corporate Funded Organic</fullName>
                </value>
                <value>
                    <fullName>Corporate Funded PPC</fullName>
                </value>
                <value>
                    <fullName>Corporate Website</fullName>
                </value>
                <value>
                    <fullName>Corp Paid Reviews</fullName>
                </value>
                <value>
                    <fullName>Custom Implementation</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Lighthouse</fullName>
                </value>
                <value>
                    <fullName>Website Template</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_2_Launch_Date_Change_Reason__c</fullName>
        <label>Phase 2 Launch Date Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yodle Caused</fullName>
                </value>
                <value>
                    <fullName>Client Caused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_2_Products__c</fullName>
        <label>Phase 2 Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Miner</fullName>
                </value>
                <value>
                    <fullName>Centermark</fullName>
                </value>
                <value>
                    <fullName>Centermark Lite</fullName>
                </value>
                <value>
                    <fullName>Client Side Organic</fullName>
                </value>
                <value>
                    <fullName>Corporate Funded Display</fullName>
                </value>
                <value>
                    <fullName>Corporate Funded Organic</fullName>
                </value>
                <value>
                    <fullName>Corporate Funded PPC</fullName>
                </value>
                <value>
                    <fullName>Corporate Website</fullName>
                </value>
                <value>
                    <fullName>Corp Paid Reviews</fullName>
                </value>
                <value>
                    <fullName>Custom Implementation</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Lighthouse</fullName>
                </value>
                <value>
                    <fullName>Website Template</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_3_Launch_Date_Change_Reason__c</fullName>
        <label>Phase 3 Launch Date Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yodle Caused</fullName>
                </value>
                <value>
                    <fullName>Client Caused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_3_Products__c</fullName>
        <label>Phase 3 Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Miner</fullName>
                </value>
                <value>
                    <fullName>Centermark</fullName>
                </value>
                <value>
                    <fullName>Centermark Lite</fullName>
                </value>
                <value>
                    <fullName>Client Side Organic</fullName>
                </value>
                <value>
                    <fullName>Corporate Funded Display</fullName>
                </value>
                <value>
                    <fullName>Corporate Funded Organic</fullName>
                </value>
                <value>
                    <fullName>Corporate Funded PPC</fullName>
                </value>
                <value>
                    <fullName>Corporate Website</fullName>
                </value>
                <value>
                    <fullName>Corp Paid Reviews</fullName>
                </value>
                <value>
                    <fullName>Custom Implementation</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Lighthouse</fullName>
                </value>
                <value>
                    <fullName>Website Template</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Kick Off</fullName>
                    <default>true</default>
                    <label>Project Kick Off</label>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Development &amp; Production</fullName>
                </value>
                <value>
                    <fullName>User Acceptance Testing</fullName>
                </value>
                <value>
                    <fullName>Launched</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fulfillment</label>
    <nameField>
        <displayFormat>FF-{000000}</displayFormat>
        <label>Fulfillment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Owner_Url__c</columns>
        <columns>Opp_Closed_Date__c</columns>
        <columns>Products_Sold__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Strategic_Project_Managers_Fulfillment</fullName>
        <filterScope>Queue</filterScope>
        <label>Strategic Project Managers</label>
        <queue>Strategic_Project_Managers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>Account_and_Opp_Required</fullName>
        <active>true</active>
        <description>An account and an opportunity is required for each fulfillment record</description>
        <errorConditionFormula>OR(
  ISBLANK(Account__c),
  ISBLANK(Opportunity__c)
)</errorConditionFormula>
        <errorMessage>Both an account and an opportunity is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Act_Launch_Dates_Required_For_Products</fullName>
        <active>true</active>
        <description>Launch dates must be filled out for the Products populated in the products sold field</description>
        <errorConditionFormula>AND(
  ISPICKVAL(Status__c, "Project Complete"),
  NOT(ISCHANGED(Products_Sold__c)),
  OR(
    AND(
      CONTAINS(Products_Sold__c, "Centermark"),
      ISBLANK(Organic_Launch_Date__c)
    ),
    AND(
      CONTAINS(Products_Sold__c, "Custom Implementation"),
      ISBLANK(Custom_Implementation_Launch_Date__c)
    ),
    AND(
      CONTAINS(Products_Sold__c, "Corporate Funded PPC"),
      ISBLANK(Sponsored_Launch_Date__c)
    ),
    AND(
      CONTAINS(Products_Sold__c, "Corporate Funded Display"),
      ISBLANK(Display_Launch_Date__c)
    ),
    AND(
      CONTAINS(Products_Sold__c, "Corp Paid Reviews"),
      ISBLANK(Reviews_Launch_Date__c)
    ),
    AND(
      CONTAINS(Products_Sold__c, "Website Template"),
      ISBLANK(Website_Launch_Date__c)
    ),
    AND(
      CONTAINS(Products_Sold__c, "Facebook"),
      ISBLANK(Facebook_Launch_Date__c)
    ) 
  )
)</errorConditionFormula>
        <errorMessage>Actual launch dates must be filled out for the products that have been sold.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Est_Launch_Dates_Required_For_Products</fullName>
        <active>true</active>
        <description>Launch dates must be filled out for the Products populated in the products sold field</description>
        <errorConditionFormula>AND(
  NOT(ISNEW()),
  NOT(ISPICKVAL(Status__c, "Presale")),
  NOT(ISPICKVAL(Status__c, "Onboarding")),
  NOT(ISPICKVAL(Status__c, "Project Cancelled")),
  NOT(ISCHANGED(Products_Sold__c)),
  OR(
    AND(
      CONTAINS(Products_Sold__c, "Centermark"),
      ISBLANK(Centermark_Estimated_Launch_Date__c)
    ),
    AND(
      CONTAINS(Products_Sold__c, "Custom Implementation"),
      ISBLANK(Custom_Implementation_Estimated_Launch__c)
    ),
    AND(
      CONTAINS(Products_Sold__c, "Corporate Funded PPC"),
      ISBLANK(PPC_Estimated_Launch_Date__c)
    ),
    AND(
      CONTAINS(Products_Sold__c, "Corporate Funded Display"),
      ISBLANK(Display_Estimated_Launch_Date__c)
    ),
    AND(
      CONTAINS(Products_Sold__c, "Corp Paid Reviews"),
      ISBLANK(Reviews_Estimated_Launch_Date__c)
    ),
    AND(
      CONTAINS(Products_Sold__c, "Website Template"),
      ISBLANK(Website_Template_Estimated_Launch_Date__c)
    ),
    AND(
      CONTAINS(Products_Sold__c, "Facebook"),
      ISBLANK(Facebook_Estimated_Launch_Date__c)
    )
  )
)</errorConditionFormula>
        <errorMessage>Estimated launch dates must be filled out for the products that have been sold.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phase1_Est_Launchdate_Changed_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISCHANGED(Phase_1_Estimated_Launch_Date__c),
  NOT(ISNULL(PRIORVALUE(Phase_1_Estimated_Launch_Date__c))),
  OR(
    ISPICKVAL(Phase_1_Launch_Date_Change_Reason__c,""),
    ISBLANK(Phase_1_Launch_Date_Change_Reason_Detail__c)
  )
)</errorConditionFormula>
        <errorMessage>You must fill out Phase 1 Launch Date Change Reason &amp; Phase 1 Launch Date Change Reason Detail when updating launch dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phase2_Est_Launchdate_Changed_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISCHANGED(Phase_2_Estimated_Launch_Date__c),
  NOT(ISNULL(PRIORVALUE(Phase_2_Estimated_Launch_Date__c))),
  OR(
    ISPICKVAL(Phase_2_Launch_Date_Change_Reason__c,""),
    ISBLANK(Phase_2_Launch_Date_Change_Reason_Detail__c)
  )
)</errorConditionFormula>
        <errorMessage>You must fill out Phase 2 Launch Date Change Reason &amp; Phase 2 Launch Date Change Reason Detail when updating launch dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phase3_Est_Launchdate_Changed_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISCHANGED(Phase_3_Estimated_Launch_Date__c),
  NOT(ISNULL(PRIORVALUE(Phase_3_Estimated_Launch_Date__c))),
  OR(
    ISPICKVAL(Phase_3_Launch_Date_Change_Reason__c,""),
    ISBLANK(Phase_3_Launch_Date_Change_Reason_Detail__c)
  )
)</errorConditionFormula>
        <errorMessage>You must fill out Phase 3 Launch Date Change Reason &amp; Phase 3 Launch Date Change Reason Detail when updating launch dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Date_Change_Reason_and_Detail</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  OR(
    AND(
      ISCHANGED(Website_Template_Estimated_Launch_Date__c),
      NOT(ISNULL(PRIORVALUE(Website_Template_Estimated_Launch_Date__c)))
    ),
    AND(
      ISCHANGED(Centermark_Estimated_Launch_Date__c),
      NOT(ISNULL(PRIORVALUE(Centermark_Estimated_Launch_Date__c)))
    ),
    AND(
      ISCHANGED(Custom_Implementation_Estimated_Launch__c),
      NOT(ISNULL(PRIORVALUE(Custom_Implementation_Estimated_Launch__c)))
    ),
    AND(
      ISCHANGED(PPC_Estimated_Launch_Date__c),
      NOT(ISNULL(PRIORVALUE(PPC_Estimated_Launch_Date__c)))
    ),
    AND(
      ISCHANGED(Reviews_Estimated_Launch_Date__c),
      NOT(ISNULL(PRIORVALUE(Reviews_Estimated_Launch_Date__c)))
    ),
    AND(
      ISCHANGED(Display_Estimated_Launch_Date__c),
      NOT(ISNULL(PRIORVALUE(Display_Estimated_Launch_Date__c)))
    ),
    AND(
      ISCHANGED(Facebook_Estimated_Launch_Date__c),
      NOT(ISNULL(PRIORVALUE(Facebook_Estimated_Launch_Date__c)))
    )
  ),

  OR(
    ISPICKVAL(Launch_Date_Change_Reason__c,""),
    ISBLANK(Launch_Date_Change_Reason_Detail__c)
  )
)</errorConditionFormula>
        <errorMessage>You must fill out Launch Date Change Reason &amp; Launch Date Change Reason Detail when updating launch dates.</errorMessage>
    </validationRules>
</CustomObject>